flowcontroller/yamls/networkpolicy-allow-flink-jobmanager-to-mongodb-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flink-jobmanager-to-mongodb-egress
spec:
  policyTypes:
  - Egress
  podSelector: 
    matchLabels: 
      app: flink
      component: jobmanager
  egress:
  - to:
    - namespaceSelector: 
        matchLabels: 
          name: horizon-api
      podSelector:
        matchLabels:
          name: mongo
    ports:
    - protocol: TCP
      port: 27017
